manifests/overlays/staging/CI-dashboard-monitoring/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ciflow-deployment
  labels:
    app: ciflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ciflow
  template:
    metadata:
      labels:
        app: ciflow
    spec:
      imagePullSecrets:
        - name: harbor-secret
      containers:
        - name: ciflow-container
          image: busybox # {"$imagepolicy": "staging:ciflow-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
