manifests/overlays/staging/CI-dashboard-monitoring/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ciflow-ingress
spec:
  rules:
  - host: stag-ciflow.th1enlm02.live
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ciflow
              port:
                number: 5173
